revert border-collapse: separate to avoid offset problems in WebKit

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -17,10 +17,10 @@
 }
 
 .handsontable.hidden {
-  display : none;
-  left : 0;
-  position :absolute;
-  top : 0;
+  display: none;
+  left: 0;
+  position: absolute;
+  top: 0;
 }
 
 .handsontable * {
@@ -30,7 +30,7 @@
 }
 
 .handsontable table {
-  border-collapse: collapse;
+  border-collapse: separate; /*it must be separate, otherwise there are offset miscalculations in WebKit: http://stackoverflow.com/questions/2655987/border-collapse-differences-in-ff-and-webkit*/
   position: relative;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -45,7 +45,7 @@
   width: 0;
   outline-width: 0;
   /* reset bootstrap table style. for more info see: https://github.com/warpech/jquery-handsontable/issues/224 */
-  max-width : none;
+  max-width: none;
   max-height: none;
 }
 
